<resources>
    <string name="app_name">Cost Of Living</string>
    <string name="bought">Bought</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="category">Category</string>
    <string name="cost">Cost</string>
    <string name="already_purchased">Already purchased</string>
    <string name="new_expense_item">New Expense Item</string>
    <string name="new_loan_item">New Loan Item</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="warn_message">Enter username and password!</string>
    <string name="wrong_credentials_message">Wrong username/password!</string>
    <string name="user_exists_message">This username already exists!</string>
    <string name="successful_registration_message">Successful registration!</string>
    <string name="expenses_incomes">Expenses / Incomes</string>
    <string name="loans">Loans</string>
    <string name="login_welcome">Welcome to CostOfLiving!</string>
    <string name="login">Login</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="register">Register</string>
    <string name="remove_chosen_category">Remove chosen category</string>
    <string name="add_new_category">Add new category</string>
    <string name="expense">Expense</string>
    <string name="income">Income</string>
    <string name="person_i_owe_owes_me">Person I owe/owes me</string>
    <string name="amount">Amount</string>
    <string name="owes_me">owes me</string>
    <string name="i_owe">i owe</string>
    <string name="monthly_graph">Monthly graph</string>
    <string name="yearly_graph">Yearly graph</string>
    <string name="expenses">Expenses</string>
    <string name="log_out">Log out</string>
    <string name="people_i_owe">People I owe</string>
    <string name="people_owe_me">People owe me</string>
    <string name="enter_data_message">Supply name and cost!</string>
    <string name="shared_expense">Shared expense:</string>
    <string name="shared_expenses">Shared expenses</string>
    <string name="uncheck_all">Uncheck all shared expenses</string>
    <string name="export_dbs">Export databases</string>
    <string name="import_dbs">Import databases</string>
    <string name="auto_backup">Auto backup</string>
    <string name="csv_file_generated_text">CSV file generated successfully!</string>
    <string name="csv_file_not_generated_text">Faild to generate CSV file!</string>
    <string name="ok">OK</string>
    <string name="year">Year</string>
    <string name="year_and_month">Year and Month</string>
    <string name="datePickerHeader">Choose a date to query your expenses!</string>
    <string name="date_picker">Date Picker</string>
    <string name="statistics">Statistics</string>
    <string name="backup_dbs">Backup databases</string>
    <string name="restore_dbs">Restore databases</string>
    <string name="backup_message">Successful backup!</string>
    <string name="restore_message">Successful restore!</string>
    <string name="export_succesfull">Databases successfuly exported to the applications data folder.</string>
    <string name="choose_file">Choose a file to restore database!</string>
    <string name="file_picked">File picked</string>

    <string-array name="category_items">
        <item>Food</item>
        <item>Electronic</item>
        <item>Book</item>
    </string-array>
</resources>