<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="example.javatpoint.com.kotlinoptionsmenu.ExpenseActivity">
    <item
        android:id="@+id/action_monthly_graph"
        android:title="@string/monthly_graph"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_yearly_graph"
        android:title="@string/yearly_graph"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_get_shared"
        android:title="@string/shared_expenses"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_uncheck_shared"
        android:title="@string/uncheck_all"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_list_expenses"
        android:title="@string/expenses"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_log_out"
        android:title="@string/log_out"
        app:showAsAction="never"/>
</menu>