<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dip">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/datePickerHeader"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold" />

    <DatePicker
        android:id="@+id/dpDatePicker"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:calendarViewShown="false"
        android:datePickerMode="spinner" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rbYear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/year" />

        <RadioButton
            android:id="@+id/rbYearAndMonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/year_and_month" />

    </RadioGroup>

</LinearLayout>

